Student Frame Done by C211010

--- a/src/StudentFrame.form
+++ b/src/StudentFrame.form
@@ -115,10 +115,10 @@
                                       <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jTextField2" min="-2" pref="144" max="-2" attributes="0"/>
-                                      <Component id="jTextField3" min="-2" pref="144" max="-2" attributes="0"/>
-                                      <Component id="jTextField4" alignment="0" min="-2" pref="144" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="jTextField3" alignment="0" pref="176" max="32767" attributes="0"/>
+                                      <Component id="jTextField2" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="jTextField4" alignment="0" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
